[gd_scene load_steps=24 format=3 uid="uid://bhuefgcxyu8a0"]

[ext_resource type="Script" uid="uid://5qpx3pc03igt" path="res://scripts/path_open.gd" id="1_jdhll"]
[ext_resource type="Material" uid="uid://crjr13k12egng" path="res://scenes/splash.tres" id="2_ss6bc"]
[ext_resource type="Texture2D" uid="uid://fw8qd8h4eq2q" path="res://game_assets/icons/tree.png" id="3_ss6bc"]
[ext_resource type="Theme" uid="uid://cx365ld2mgjne" path="res://resources/theme_base.tres" id="4_x1sun"]
[ext_resource type="Theme" uid="uid://74kwx22ikciq" path="res://resources/theme_headers.tres" id="5_2snp2"]
[ext_resource type="FontFile" uid="uid://d0xcffxoyd14k" path="res://game_assets/fonts/JetBrainsMono-VariableFont_wght.ttf" id="6_wlr1k"]
[ext_resource type="Script" uid="uid://dog0wpjftm7uk" path="res://scripts/validate_line.gd" id="7_bowy3"]
[ext_resource type="PackedScene" uid="uid://wd63efdi6bdn" path="res://scenes/BaseBComponent.tscn" id="8_0oi6a"]
[ext_resource type="Script" uid="uid://dx40hpbce8w60" path="res://scripts/button_config.gd" id="9_m1sb4"]
[ext_resource type="Theme" uid="uid://cxe1714v2p0a1" path="res://resources/theme.tres" id="10_2snp2"]
[ext_resource type="Script" uid="uid://cink4uduoxu4b" path="res://scripts/end.gd" id="10_386ds"]
[ext_resource type="Script" uid="uid://b2g2qlhqygihs" path="res://scripts/filegrid.gd" id="10_x1sun"]
[ext_resource type="Texture2D" uid="uid://dqb8s08wyy6i6" path="res://game_assets/icons/file.png" id="11_2snp2"]
[ext_resource type="Texture2D" uid="uid://d1d0watnunr27" path="res://game_assets/icons/dir.png" id="12_wlr1k"]
[ext_resource type="Material" uid="uid://jm8oyahk342s" path="res://resources/context_menu.tres" id="14_0oi6a"]
[ext_resource type="Script" uid="uid://c8207sv1hbg2e" path="res://scripts/unr.gd" id="15_m1sb4"]
[ext_resource type="Script" uid="uid://xegaq4ui6oi1" path="res://scenes/other_procnodes.gd" id="16_386ds"]
[ext_resource type="Material" uid="uid://dhpvvvjn14qxk" path="res://resources/fg_block.tres" id="17_t41tu"]
[ext_resource type="Texture2D" uid="uid://dsxnvlh6lq816" path="res://game_assets/icons/undo.png" id="18_nvd4w"]
[ext_resource type="Texture2D" uid="uid://b26iy2881ia4q" path="res://game_assets/icons/refresh.png" id="19_46xgf"]

[sub_resource type="Resource" id="Resource_3idxy"]
script = ExtResource("9_m1sb4")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.05
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 0.98
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_dnr4j"]
script = ExtResource("9_m1sb4")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.2
_hover_scale = 1.05
press_color = Color(0.84, 0.84, 0.84, 1)
_press_scale = 0.98
animation_speed = 2.657
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_t41tu"]
script = ExtResource("9_m1sb4")
hover_color = Color(1.3, 1.1, 1.1, 1)
hover_mult = 1.15
_hover_scale = 1.02
press_color = Color(1.1, 0.9, 0.9, 1)
_press_scale = 0.97
animation_speed = 1.951
animation_decay = 4.564
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[node name="Node2D" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jdhll")
typename = "path_open"
persistent = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 8
material = ExtResource("2_ss6bc")
instance_shader_parameters/corner_radius_width_add = Vector2(9.365, 1)
instance_shader_parameters/outline_color = Color(0.85, 0.85, 0.85, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.7529412)
layout_mode = 0
offset_left = 365.0
offset_top = 128.0
offset_right = 978.0
offset_bottom = 532.0

[node name="root" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 41.0
offset_bottom = 41.0

[node name="i" type="Sprite2D" parent="ColorRect/root"]
position = Vector2(24.000015, 22)
scale = Vector2(0.9496938, 0.9496938)
texture = ExtResource("3_ss6bc")

[node name="Label" type="Label" parent="ColorRect/root"]
modulate = Color(0.41, 0.41, 0.41, 1)
z_index = 1
layout_mode = 0
offset_left = 41.0
offset_top = 11.0
offset_right = 214.0
offset_bottom = 54.0
scale = Vector2(0.600218, 0.600218)
theme = ExtResource("4_x1sun")
text = "Open"

[node name="Label" type="LineEdit" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.999996
offset_top = -56.99997
offset_right = -42.59265
offset_bottom = -17.621887
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.92970926, 0.92970926)
theme = ExtResource("5_2snp2")
theme_override_fonts/font = ExtResource("6_wlr1k")
placeholder_text = "filename.ext"
max_length = 256
expand_to_text_length = true
script = ExtResource("7_bowy3")
resize_after = 550
auto_red = true
monospaced = false
metadata/_custom_type_script = "uid://dog0wpjftm7uk"

[node name="train" parent="ColorRect" instance=ExtResource("8_0oi6a")]
instance_shader_parameters/corner_radius_width_add = Vector2(-9, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.73175
offset_top = -52.0
offset_right = -23.548828
offset_bottom = -25.825714
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.3529073, 1.3529073)
pivot_offset = Vector2(18.091461, 13.087143)
mouse_filter = 1
color = Color(0.6045, 0.93, 0.631625, 1)
button_type = 1
top = true
hint = &"Add"
base_scale_x = 0.45
resize_after = 6
text = "->"
base_size = Vector2(36.182922, 26.174286)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_3idxy")
in_splash = true

[node name="undo" parent="ColorRect" instance=ExtResource("8_0oi6a")]
self_modulate = Color(1, 1, 1, 0)
material = ExtResource("17_t41tu")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.94, 0.94, 0.94, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.407843)
layout_mode = 0
offset_left = 78.0
offset_top = -2.0
offset_right = 127.64459
offset_bottom = 50.865612
scale = Vector2(0.6480339, 0.6480339)
pivot_offset = Vector2(24.822296, 26.432806)
color = Color(0.49019608, 0.627451, 0.83137256, 1)
button_type = 1
top = true
hint = &"layer"
base_size = Vector2(49.644592, 52.865612)
alignment = Vector2(0.5, 0.5)
config = SubResource("Resource_dnr4j")
in_splash = true

[node name="i" type="TextureRect" parent="ColorRect/undo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.242981
offset_top = -23.814825
offset_right = 2.757019
offset_bottom = 0.18517685
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.9290109, 1.9290109)
texture = ExtResource("18_nvd4w")

[node name="refresh" parent="ColorRect" instance=ExtResource("8_0oi6a")]
self_modulate = Color(1, 1, 1, 0)
material = ExtResource("17_t41tu")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.94, 0.94, 0.94, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.407843)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 1.9999927
offset_right = -1.3554077
offset_bottom = 44.73934
grow_horizontal = 0
scale = Vector2(0.6480339, 0.6480339)
pivot_offset = Vector2(24.822296, 21.369675)
color = Color(0.49019608, 0.627451, 0.83137256, 1)
button_type = 1
top = true
hint = &"layer"
base_size = Vector2(49.644592, 42.73935)
alignment = Vector2(0.5, 0.5)
config = SubResource("Resource_dnr4j")
in_splash = true

[node name="i" type="TextureRect" parent="ColorRect/refresh"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.242981
offset_top = -23.814825
offset_right = 2.757019
offset_bottom = 0.18517685
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.9290109, 1.9290109)
texture = ExtResource("19_46xgf")

[node name="list" parent="ColorRect" instance=ExtResource("8_0oi6a")]
material = ExtResource("14_0oi6a")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(1, 1, 1, 0)
instance_shader_parameters/tuning = Color(0.509804, 0.509804, 0.509804, 0.439216)
layout_mode = 0
offset_left = 14.999975
offset_top = 43.0
offset_right = 156.11115
offset_bottom = 49.666656
scale = Vector2(0.9, 0.9)
color = Color(1, 1, 1, 0)
script = ExtResource("15_m1sb4")
naming = "list_dirs"
auto = true
auto_names = Array[String](["Desktop:desk", "Downloads:downloads", "Documents:docs", "Pictures:pics"])
base_scale_x = 0.0
base_size = Vector2(141.11118, 6.6666565)
static_mode = true
_scroll_container = 0.0
arrangement_padding = Vector2(0, 5)
mouse_open = false
menu_name = &"list_dirs"
dynamic_size = true
max_size = 322

[node name="name" parent="ColorRect/list" instance=ExtResource("8_0oi6a")]
z_index = 2
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.43137255, 0.5882353, 0.9019608, 1)
instance_shader_parameters/tuning = Color(0.26400003, 0.3593334, 0.55, 0.5647059)
layout_mode = 0
offset_left = 200.0
offset_top = 221.333
offset_right = 436.0
offset_bottom = 262.333
pivot_offset = Vector2(118, 20.500008)
button_type = 1
placeholder = true
resize_after = 9
text = "Hello!!"
text_alignment = Vector2(-1, 0)
text_offset = Vector2(15, 0)
base_size = Vector2(236, 41.000015)
alignment = Vector2(0.5, 0.5)
mouse_open = false
config = SubResource("Resource_t41tu")
in_splash = true
still_hover_in_block = true

[node name="ProceduralNodes" type="Node" parent="ColorRect/list" node_paths=PackedStringArray("instance")]
script = ExtResource("16_386ds")
naming = "list_dirs"
one_d = true
two_d = true
instance = NodePath("../name")
metadata/_custom_type_script = "uid://cppqde4187p8n"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 151.0
offset_top = 42.0
offset_right = 594.0
offset_bottom = 340.0

[node name="GridContainer" type="GridContainer" parent="ColorRect/ScrollContainer"]
layout_mode = 2
theme = ExtResource("10_2snp2")
columns = 5
script = ExtResource("10_x1sun")
file_icon = ExtResource("11_2snp2")
dir_icon = ExtResource("12_wlr1k")
icon_size = Vector2(70, 70)
cell_size = Vector2(80, 130)
max_label_chars = 20

[node name="toppath" type="LineEdit" parent="ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 124.0
offset_top = 10.999999
offset_right = 64.1344
offset_bottom = 45.0
grow_horizontal = 2
scale = Vector2(0.7990826, 0.7990826)
theme = ExtResource("5_2snp2")
theme_override_fonts/font = ExtResource("6_wlr1k")
theme_override_font_sizes/font_size = 20
placeholder_text = "path"
max_length = 256
expand_to_text_length = true
script = ExtResource("7_bowy3")
resize_after = 550
auto_red = true
monospaced = false
auto_click = false
metadata/_custom_type_script = "uid://dog0wpjftm7uk"

[node name="Node" type="Node" parent="."]
script = ExtResource("10_386ds")

[connection signal="line_enter" from="ColorRect/Label" to="." method="_on_label_line_enter"]
[connection signal="released" from="ColorRect/train" to="." method="_on_trainn_released"]
[connection signal="released" from="ColorRect/undo" to="." method="_on_undo_released"]
[connection signal="released" from="ColorRect/refresh" to="." method="_on_refresh_released"]
[connection signal="child_button_release" from="ColorRect/list" to="." method="_on_list_child_button_release"]
[connection signal="directory_entered" from="ColorRect/ScrollContainer/GridContainer" to="." method="_on_grid_container_directory_entered"]
[connection signal="file_hovered" from="ColorRect/ScrollContainer/GridContainer" to="." method="_on_grid_container_file_hovered"]
[connection signal="file_selected" from="ColorRect/ScrollContainer/GridContainer" to="." method="_on_grid_container_file_selected"]
[connection signal="refreshed" from="ColorRect/ScrollContainer/GridContainer" to="." method="_on_grid_container_refreshed"]
[connection signal="line_enter" from="ColorRect/toppath" to="." method="_on_toppath_line_enter"]
[connection signal="text_submitted" from="ColorRect/toppath" to="." method="_on_toppath_text_submitted"]
